--- a/facebook/pom.xml
+++ b/facebook/pom.xml
@@ -10,6 +10,13 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>facebook</artifactId>
+    <dependencies>
+        <dependency>
+            <groupId>com.webAutomation</groupId>
+            <artifactId>generic</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 
 
 </project>
