--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,7 @@
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
     <modules>
-        <module>Generic</module>
-        <module>Cnn</module>
+        <module>generic</module>
         <module>facebook</module>
     </modules>
 
